--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 server.port=9999
+logging.level.org.springframework=DEBUG
+#spring.data.mongodb.uri=mongodb://localhost:27017/post_pilot
+
+# Database
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=post_pilot
+# Optional authentication:
+#spring.data.mongodb.username=admin
+#spring.data.mongodb.password=admin
