--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=9999
-#logging.level.org.springframework=DEBUG
-logging.level.org.springframework.boot.autoconfigure=INFO
+logging.level.org.springframework=DEBUG
+#logging.level.org.springframework.boot.autoconfigure=INFO
 #spring.data.mongodb.uri=mongodb://localhost:27017/post_pilot
 
 # Database
