--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,11 @@ logging.level.org.springframework=DEBUG
 #logging.level.org.springframework.boot.autoconfigure=INFO
 
 # Database
+spring.data.mongodb.uri=mongodb+srv://admin:admin@post-pilot.wmfqgoc.mongodb.net/
 #spring.data.mongodb.uri=mongodb://localhost:27017/post_pilot
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=post_pilot
+#spring.data.mongodb.host=localhost
+#spring.data.mongodb.port=27017
+#spring.data.mongodb.database=post_pilot
 # Optional authentication:
 #spring.data.mongodb.username=admin
 #spring.data.mongodb.password=admin
