--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -1,5 +1,5 @@
 # MongoDB connection (Docker Compose service name as host)
-spring.data.mongodb.uri=mongodb+srv://admin:admin@post-pilot.wmfqgoc.mongodb.net/
+spring.data.mongodb.uri=mongodb+srv://admin:admin@post-pilot.wmfqgoc.mongodb.net/post_pilot
 
 # Optional: define the database name explicitly
 #spring.data.mongodb.database=post_pilot
